--- a/views/admin/admin-add-account.ejs
+++ b/views/admin/admin-add-account.ejs
@@ -16,10 +16,12 @@
                 <input type="text" name="fullName" id="fullName" class="input input-styled" style="width: 300px" required><br><br>
                 <label style="margin-left: 14.6%">Username</label>
                 <input type="text" name="Username" id="Username" class="input input-styled" style="width: 300px" required><br><br>
-                <label style="margin-left: 14.6%">Password</label>
+                <label style="margin-left: 15.2%">Password</label>
                 <input type="text" name="Password" id="Password" class="input input-styled" style="width: 300px" required><br><br>
-                <label style="margin-left: 16.4%">Address </label>
+                <label style="margin-left: 9.9%">Address (Billing)</label>
                 <input type="text" name="billingAddress" id="billingAddress" class="input input-styled"  style="width: 500px" required><br><br>
+                <label style="margin-left: 8.2%">Address (Delivery)</label>
+                <input type="text" name="deliveryAddress" id="deliveryAddress" class="input input-styled"  style="width: 500px" required><br><br>
                 <label style="margin-left: 11.6%">Email Address</label>
                 <input type="text" name="email" id="email" class="input input-styled" style="width: 300px" required><br><br>
                 <label style="margin-left: 9.4%">Contact Number</label>
