Revert "added user edit features for admin"
This reverts commit 5a01cd9bb9171e0888c4414c0cd3ae1b567582c2.

--- a/views/admin/admin-accounts.ejs
+++ b/views/admin/admin-accounts.ejs
@@ -12,11 +12,8 @@
     <div class="container mt-6">
         <form>
             <div class="field has-addons search-field">
-                <form method="post">
-                    <input class="input input-styled" type="text" placeholder="Search">
-                    <div class="control"><button type="submit" class="button submit-button">Search</button></div>
-                </form>
-
+                <input class="input input-styled" type="text" placeholder="Search">
+                <div class="control"><button class="button submit-button">Search</button></div>
             </div>
         </form>
     </div>
@@ -42,23 +39,10 @@
                     <%=element.alternativeContact%>
                 </td>
                 <td>
-                    <a href="/admin/admin-edit-account/<%=element._id%>" class="button submit-button is-small">Edit</a>
+                    <a href="edit-account/user1.html" class="button submit-button is-small">Edit</a>
                 </td>
                 <td>
-                    <a data-doc="<%=element._id%>" class="button submit-button is-small">Delete</a>
-                    <script>
-                        const trashcan = document.querySelector('a.delete');
-
-                        trashcan.addEventListener('click', (e) => {
-                            const endpoint = '/admin/admin-accounts/${trashcan.dataset.doc}';
-
-                            fetch(endpoint, {
-                                method: 'DELETE'
-                            })
-                                .then(() => {})
-                                .catch(err => console.log(err));
-                        })
-                    </script>
+                    <button class="button submit-button is-small">Delete</button>
                 </td>
             </tr>
             <% });%>
