Fixed Edit account

--- a/views/admin/admin-success.ejs
+++ b/views/admin/admin-success.ejs
@@ -5,7 +5,7 @@
 
     <section class="hero hero-header-background is-small">
         <div class="hero-body has-text-centered">
-            <p class="hero-styling">Successfully Added</p>
+            <p class="hero-styling"><%=headertitle%></p>
         </div>
     </section>
 
