--- a/views/admin/admin-edit-account.ejs
+++ b/views/admin/admin-edit-account.ejs
@@ -10,12 +10,12 @@
     </section>
 
     <div class="container" style="margin-top: 60px; margin-bottom: 40px">
-        <form class="admin-edit-account" method="post"">
+        <form class="admin-edit-account" method="post">
             <div class="has-text-justified" style="margin-left: 5%; margin-top: 40px;">
                 <label style="margin-left: 18.1%">Name</label>
                 <input type="text" name="fullName" id="fullName" class="input input-styled" style="width: 300px" value="<%=result.fullName%>" required><br><br>
                 <label style="margin-left: 14.6%">Username</label>
-                <input type="text" disabled name="Username" id="Username" class="input input-styled" style="width: 300px" value="<%=result.username%>" required><br><br>
+                <input type="text" name="Username" id="Username" class="input input-styled" style="width: 300px" value="<%=result.username%>" required><br><br>
                 <label style="margin-left: 9.9%">Address (Billing)</label>
                 <input type="text" name="billingAddress" id="billingAddress" class="input input-styled"  style="width: 500px" value="<%=result.billingAddress%>" required><br><br>
                 <label style="margin-left: 8.2%">Address (Delivery)</label>
