--- a/views/client/partials/accountMenu.ejs
+++ b/views/client/partials/accountMenu.ejs
@@ -11,7 +11,7 @@
         <ul class="menu-list">
             <li><a href="transactions.html">View Past Transactions</a></li>
             <li><a <% if(page == 'Cart') {  %> class="is-active" <% } %> href="/cart">View Cart</a></li>
-            <li><a href="checkout.html">Checkout</a></li>
+            <li><a <% if(page == 'Checkout') {  %> class="is-active" <% } %> href="/checkout">Checkout</a></li>
         </ul>
     </div>
 </div>
