--- a/views/client/product.ejs
+++ b/views/client/product.ejs
@@ -89,7 +89,7 @@
                                     <span class="material-icons">more_horiz</span>
                                     <div class="dropdown-menu">
                                         <div class="dropdown-content">
-                                            <div class="dropdown-item"5><p>Edit</p></div>
+                                            <div class="dropdown-item"5><a id="editReview">Edit</a></div>
                                             <div class="dropdown-item"><a id="deleteReview">Delete</a></div>
                                         </div>
                                     </div>
