--- a/views/client/partials/accountMenu.ejs
+++ b/views/client/partials/accountMenu.ejs
@@ -9,7 +9,7 @@
         </ul>
         <p class="menu-label">Shop</p>
         <ul class="menu-list">
-            <li><a href="transactions.html">View Past Transactions</a></li>
+            <li><a <% if(page == 'Transactions') {  %> class="is-active" <% } %> href="/transactions">View Past Transactions</a></li>
             <li><a <% if(page == 'Cart') {  %> class="is-active" <% } %> href="/cart">View Cart</a></li>
             <li><a <% if(page == 'Checkout') {  %> class="is-active" <% } %> href="/checkout">Checkout</a></li>
         </ul>
