Delete product and file upload fixes

--- a/views/admin/admin-edit-product.ejs
+++ b/views/admin/admin-edit-product.ejs
@@ -16,8 +16,7 @@
                     <div>
                         <img src="/img/products/<%=result.image%>" name="productImg" id="productImg" class="product-images">
                     </div>
-
-
+                        <input type="hidden" name="imgName" id="imgName" value="<%=result.image%>">
                     <div>
                         <table id="imageTable" class="table is-hoverable">
                         <td>
