--- a/views/admin/admin-product.ejs
+++ b/views/admin/admin-product.ejs
@@ -68,7 +68,7 @@
                     <a href="/admin/admin-edit-product/<%=element._id%>" class="button submit-button is-small">Modify</a>
                 </td>
                 <td>
-                    <button class="button submit-button is-small">Delete</button>
+                    <a href="/admin/admin-delete-product/<%=element._id%>" class="button submit-button is-small">Delete</a>
                 </td>
             </tr>
             <% });%>
