Added validation checkin for user management and redirected product img directory

--- a/views/admin/admin-edit-account.ejs
+++ b/views/admin/admin-edit-account.ejs
@@ -10,6 +10,13 @@
     </section>
 
     <div class="container" style="margin-top: 60px; margin-bottom: 40px">
+        <% if(error != null) { %>
+            <% error.forEach(function(element) { %>
+            <div class="notification is-danger">
+                <p><%=element.msg%></p>
+            </div>
+            <% }) %>
+        <% } %>
         <form class="admin-edit-account" method="post">
             <div class="has-text-justified" style="margin-left: 5%; margin-top: 40px;">
                 <label style="margin-left: 18.1%">Name</label>
