--- a/views/admin/admin-success.ejs
+++ b/views/admin/admin-success.ejs
@@ -9,6 +9,23 @@
         </div>
     </section>
 
+    <div class="container">
+        <section class="section">
+
+            <article class="message is-primary">
+                <div class="message-body">
+                    <p><%=line1%></p>
+                    <br />
+                    <p><%=line2%></p>
+                    <br />
+                    <a href="<%=link%>">Return to Management Page</a>
+                </div>
+            </article>
+
+        </section>
+
+    </div>
+
     <%- include('./partials/footer.ejs'); %>
 
 </div>
