--- a/views/admin/admin-accounts.ejs
+++ b/views/admin/admin-accounts.ejs
@@ -22,6 +22,7 @@
     </div>
 
     <div class="container" style="margin-top: 60px; margin-bottom: 40px">
+        <%if(result.length > 0){%>
         <table class="table table-hover admin-account-table" >
             <thead>
             <tr>
@@ -53,7 +54,11 @@
             </tbody>
 
         </table>
+        <%} else{%>
+            <p class="hero-styling has-background-grey-lighter" style="font-size: 30px; text-align: center; margin-bottom: 70px;">No users found</p>
+            <%}%>
         <a href="/admin/admin-add-account" class="button submit-button is-medium" style="margin-left: 13%">Add New User Account</a>
+
     </div>
 
     <%- include('./partials/footer.ejs'); %>
