--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-style" role="navigation">
     <div class="navbar-menu">
         <div class="navbar-start">
-            <a class="navbar-item" href="/">
+            <a class="navbar-item" href="/admin/adminIndex">
                 HOME
             </a>
             <a class="navbar-item" href="/admin/admin-product">
