Changed product sizes to number

--- a/views/admin/admin-add-product.ejs
+++ b/views/admin/admin-add-product.ejs
@@ -38,7 +38,7 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td><input type="text" name="size1" id="size1" class="input input-styled" size="11" required></td>
+                    <td><input type="number" name="size1" id="size1" class="input input-styled" size="11" required></td>
                     <td><input type="number" name="price1" id="price1" class="input input-styled" required></td>
                 </tr>
 
