--- a/views/admin/admin-add-account.ejs
+++ b/views/admin/admin-add-account.ejs
@@ -24,7 +24,7 @@
                 <label style="margin-left: 14.6%">Username</label>
                 <input type="text" name="Username" id="Username" class="input input-styled" style="width: 300px" required><br><br>
                 <label style="margin-left: 15.2%">Password</label>
-                <input type="text" name="Password" id="Password" class="input input-styled" style="width: 300px" required><br><br>
+                <input type="password" name="Password" id="Password" class="input input-styled" style="width: 300px" required><br><br>
                 <label style="margin-left: 9.9%">Address (Billing)</label>
                 <input type="text" name="billingAddress" id="billingAddress" class="input input-styled"  style="width: 500px" required><br><br>
                 <label style="margin-left: 8.2%">Address (Delivery)</label>
