reverted image directory back to public and added view and editing of admin

--- a/views/admin/admin-edit-product.ejs
+++ b/views/admin/admin-edit-product.ejs
@@ -14,7 +14,7 @@
             <div class="product-photos align-items-center">
 
                     <div>
-                        <img src="/products/<%=result.image%>" name="productImg" id="productImg" class="product-images">
+                        <img src="/img/products/<%=result.image%>" name="productImg" id="productImg" class="product-images">
                     </div>
                         <input type="hidden" name="imgName" id="imgName" value="<%=result.image%>">
                     <div>
