--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -17,7 +17,7 @@
                     <a class="navbar-link">Hello, <%=name%></a>
 
                     <div class="navbar-dropdown">
-                        <a class="navbar-item" href="/account">My Account</a>
+                        <a class="navbar-item" href="/admin/admin-profile">My Account</a>
                         <hr class="navbar-divider" />
                         <a class="navbar-item" href="/logout">Logout</a>
                     </div>
