login, index and orderDetails

--- a/views/admin/admin-product.ejs
+++ b/views/admin/admin-product.ejs
@@ -37,7 +37,7 @@
             <%result.forEach(function(element) { %>
             <tr>
                 <td class="table-image-col">
-                    <img src="<%=path.join('/img/products/' + element.image)%>">
+                    <img src="<%=path.join('../img/products/' + element.image)%>">
                 </td>
                 <td><%=element.name%></td>
                 <td><%=element.description%></td>
