--- a/views/client/checkout-success.ejs
+++ b/views/client/checkout-success.ejs
@@ -12,11 +12,11 @@
                 
                 <article class="message is-primary">
                     <div class="message-body">
-                        <p>Thank you ordering! We are now currently processing your order. You may check the <a href="view-transactions.html">View Transactions</a> page under the <a href="account.html">Accounts</a> page for updates.</p>
+                        <p>Thank you ordering! We are now currently processing your order. You may check the <a href="/transactions">View Transactions</a> page under the <a href="/account">Accounts</a> page for updates.</p>
                         <br />
                         <p>Have a great day ahead and God Bless!</p>
                         <br />
-                        <a href="index.html">Return to Home Page</a>
+                        <a href="/">Return to Home Page</a>
                     </div>
                 </article>
 
