--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-style" role="navigation">
     <div class="navbar-menu">
         <div class="navbar-start">
-            <a class="navbar-item" href="/admin/adminIndex">
+            <a class="navbar-item" href="/admin">
                 HOME
             </a>
             <a class="navbar-item" href="/admin/admin-product">
@@ -14,12 +14,12 @@
         </div>
             <div class="navbar-end">
                 <div class="navbar-item has-dropdown is-hoverable">
-                    <a class="navbar-link">Hello, <%=name%></a>
+                    <a class="navbar-link">Hello, <%=username%></a>
 
                     <div class="navbar-dropdown">
                         <a class="navbar-item" href="/admin/admin-profile">My Account</a>
                         <hr class="navbar-divider" />
-                        <a class="navbar-item" href="/logout">Logout</a>
+                        <a class="navbar-item" href="/admin/logout">Logout</a>
                     </div>
                 </div>
             </div>
