--- a/views/admin/orderdetails.ejs
+++ b/views/admin/orderdetails.ejs
@@ -27,10 +27,10 @@
 					</div>
 					<div class="column">
 						<p>
-							<strong>Contact Number: </strong><%=result.deliveryAddress %>
+							<strong>Contact Number: </strong><%=result.contactNumber %>
 						</p>
 						<p>
-							<strong>Alternative Contact Number: </strong> <%=result.deliveryAddress %>
+							<strong>Alternative Contact Number: </strong> <%=result.alternativeContactNumber %>
 						</p>
 						<br />
 						<p class="status">
