--- a/views/admin/orderdetails.ejs
+++ b/views/admin/orderdetails.ejs
@@ -33,18 +33,19 @@
 							<strong>Alternative Contact Number: </strong> <%=result.alternativeContactNumber %>
 						</p>
 						<br />
-						<p class="status">
+						<span class="status">
 							<strong>Status: </strong>
-							<% if(result.status == 'pending') { %>
-								<span class="tag is-warning">Processing</span>
-							<% } else if(result.status == 'delivered') {%>
-								<span class="tag is-primary">Delivered</span>
-							<% } else if(result.status == 'cancelled') {%> 
-								<span class="tag is-danger">Cancelled</span>
-							<% } %>
-						</p>
+							<div class="select is-small is-warning is-vcentered">
+								<select>
+								  <option <% if(result.status == "pending") { %> selected<% } %> >Processing</option>
+								  <option <% if(result.status == "completed") { %> selected<% } %>>Completed</option>
+								  <option <% if(result.status == "cancelled") { %> selected<% } %>>Cancelled</option>
+								</select>
+							</div>
+						</span>
 					</div>
 				</div>
+
 
 	
 			</section>
