index js fixes for deployment

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -43,7 +43,7 @@
                 <td>
                     <% if(element.status == 'pending') { %>
                         <span class="tag is-warning">Processing</span>
-                    <% } else if(element.status == 'delivered') {%>
+                    <% } else if(element.status == 'completed') {%>
                         <span class="tag is-primary">Delivered</span>
                     <% } else if(element.status == 'cancelled') {%> 
                         <span class="tag is-danger">Cancelled</span>
