Bug fixes and admin profile fixes

--- a/views/client/partials/footer.ejs
+++ b/views/client/partials/footer.ejs
@@ -1,6 +1,6 @@
 <section class="footer">
     <div class="content has-text-centered">
         <p>Developed by <strong>Jacob Dy and Giancarlo Tee</strong></p>
-        <a href="../admin/adminlogin.html">Admin Login</a>
+        <a href="../admin/adminlogin">Admin Login</a>
     </div>
 </section>
