--- a/views/admin/adminlogin.ejs
+++ b/views/admin/adminlogin.ejs
@@ -24,6 +24,8 @@
 						<div class="container has-text-centered">
 							<button class="button is-medium submit-button" id="login">Login</button>
 						</div>
+
+						<a href="/">Home</a>
 					</form>
 				</div>
 			</div>
