--- a/views/admin/admin-accounts.ejs
+++ b/views/admin/admin-accounts.ejs
@@ -12,11 +12,8 @@
     <div class="container mt-6">
         <form>
             <div class="field has-addons search-field">
-                <form method="post">
-                    <input class="input input-styled" type="text" placeholder="Search">
-                    <div class="control"><button type="submit" class="button submit-button">Search</button></div>
-                </form>
-
+                    <input class="input input-styled" type="text" placeholder="Search" id="searchInput">
+                    <div class="control"><button class="button submit-button" id="searchUser">Search</button></div>
             </div>
         </form>
     </div>
