--- a/views/admin/admin-product.ejs
+++ b/views/admin/admin-product.ejs
@@ -13,8 +13,8 @@
         <form>
             <div class="field has-addons search-field">
                 <form method="post">
-                    <input class="input input-styled" type="text" name="searchInput" placeholder="Search" id="searchBar">
-                    <button type="submit" class="button submit-button">Search</button>
+                    <input class="input input-styled" type="text" placeholder="Search" id="searchInput">
+                    <div class="control"><button class="button submit-button" id="searchProduct">Search</button></div>
                 </form>
 
             </div>
