--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -4,6 +4,9 @@
             <a class="navbar-item" href="/admin">
                 HOME
             </a>
+            <a class="navbar-item" href="/admin/passedOrders">
+                PASSED ORDERS
+            </a>
             <a class="navbar-item" href="/admin/admin-product">
                 PRODUCT MANAGEMENT
             </a>
