--- a/views/client/product.ejs
+++ b/views/client/product.ejs
@@ -83,6 +83,7 @@
                             <div class="content">
                                 <p class="title is-6"><%=element.fullName%></p>
                                 <p><%=element.review%></p>
+                                <div id="input-<%=element._id%>"></div>
                             </div>
                             <% if(userId == element.userId) { %>	
                                 <div class="media-right dropdown is-hoverable">
