--- a/views/client/success.ejs
+++ b/views/client/success.ejs
@@ -12,11 +12,11 @@
             
             <article class="message is-primary">
                 <div class="message-body">
-                    <p>Thank you signing up, <%=username%>! You may now order our carefully baked goods. Visit <a href="ourproducts.html">Products</a> to see a list of our breads, pastries and cakes.</p>
+                    <p>Thank you signing up, <%=username%>! You may now order our carefully baked goods. Visit <a href="/products">Products</a> to see a list of our breads, pastries and cakes.</p>
                     <br />
                     <p>Have a great day ahead and God Bless!</p>
                     <br />
-                    <a href="index.html">Return to Home Page</a>
+                    <a href="/">Return to Home Page</a>
                 </div>
             </article>
 
