--- a/views/admin/partials/footer.ejs
+++ b/views/admin/partials/footer.ejs
@@ -1,6 +1,6 @@
 <section class="footer">
     <div class="content has-text-centered">
-        <p>Developed by <strong>Jacob Dy, Peter Lacaden and Giancarlo Tee</strong></p>
-        <a href="client/login">User Login</a>
+        <p>Developed by <strong>Jacob Dy and Giancarlo Tee</strong></p>
+        <a href="../login">User Login</a>
     </div>
 </section>
